# nova

./: .gitignore  AGENTS.md  HOW_TO_RUN.md  README.md
backend/: .env.example  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
backend/app/: main.py
backend/app/common/: audit.py  crypto.py  ml_intercept.py  nova_system.py  sql_guard.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  redis.py  security.py
backend/app/modules/ai_ml/: router.py  schemas.py  service.py
backend/app/modules/auth/: exceptions.py  router.py  schemas.py  service.py
backend/app/modules/explorer/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/functions/: router.py  schemas.py  service.py
backend/app/modules/llm_functions/: router.py  schemas.py  service.py
backend/app/modules/ml_engine/: internal_router.py  router.py  schemas.py  service.py
backend/app/modules/monitoring/: repository.py  router.py  service.py
backend/app/modules/objects/: repository.py  router.py  service.py
backend/app/modules/pipes/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/query/: repository.py  router.py  service.py
backend/app/modules/snippets/: repository.py  router.py  schemas.py  service.py
backend/app/modules/stages/: __init__.py  router.py  schemas.py  service.py
backend/java-udf/src/: MLPredictUDF.java
backend/tests/: conftest.py
backend/tests/unit/: test_dialect.py  test_ml_model_ddl.py  test_query_completions.py  test_security.py  test_sql_guard.py  test_workspace_service.py
(+155 files in other folders)
